syntax = "proto3";

option go_package = "github.com/VovanShaitan/productinfo/api/productinfo_v1;productinfo_v1";


package productinfo_v1;

service ProductInfo {
    rpc addProduct(Product) returns (ProductID);
    rpc getProduct(ProductID) returns (Product);
}

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
}

message ProductID {
    string value = 1;
}